@startuml
'https://plantuml.com/class-diagram

skin rose

interface UserDetails
interface  User {
'    - getRealName()
'    - getUid()
'    - void addProcessInstance(String)
'    - Set<String> getProcessInstances()
'    - email
}
'String getEmail();
'
'    /**
'     * 获取用户姓名
'     */
'    String ;
'
'    /**
'     * 获取用户 ID
'     */
'    String ;
'
'    default void  {}
'
'    default void addProcessRecord(String processInstanceId) {}
'
'    Set<String> getProcessInstances();
'
'    int getProcessesCount();
'
'    default int getProcessRecordCount(){return 0;};
'
'    boolean hasProcessInstance(String processId);
'
'    default boolean hasProcessRecord(String processId){return false;};

class Admin

class Operator

class Client

UserDetails <|-- User

User <|.. Admin

User <|.. Operator

User <|.. Client

@enduml